aa/y.output
Terminals unused in grammar

   YNOP


Grammar

    0 $accept: unit $end

    1 unit: head code YDOT YEND

    2 head: head_dir
    3     | head head_dir

    4 code: instructions
    5     | code instructions

    6 head_dir: YDOT YSTART YLABEL
    7         | YDOT YMODULE YLABEL
    8         | YDOT YIMPORT YLABEL
    9         | YDOT YEXPORT YLABEL

   10 $@1: /* empty */

   11 head_dir: YLABEL $@1 YDOT YWORD YNUMBER

   12 instructions: b_opcode
   13             | a_opcode YLABEL
   14             | a_opcode YNUMBER
   15             | YLABYCOLON

   16 b_opcode: YPUSHX
   17         | YPOPX
   18         | YADD
   19         | YSUB
   20         | YMUL
   21         | YDIV
   22         | YCMP
   23         | YRET
   24         | YSTOP
   25         | error b_opcode

   26 a_opcode: YPUSHI
   27         | YPUSHIR
   28         | YPUSH
   29         | YPUSHR
   30         | YPOP
   31         | YPOPR
   32         | YINPUT
   33         | YOUTPUT
   34         | YSPFREE
   35         | YSPALLOC
   36         | YJMP
   37         | YJEQ
   38         | YJNE
   39         | YJLT
   40         | YJLE
   41         | YJGT
   42         | YJGE
   43         | YCALL
   44         | error a_opcode


Terminals, with rules where they appear

$end (0) 0
error (256) 25 44
YPUSHI (258) 26
YPUSHIR (259) 27
YPUSH (260) 28
YPUSHR (261) 29
YPOP (262) 30
YPOPR (263) 31
YPUSHX (264) 16
YPOPX (265) 17
YADD (266) 18
YSUB (267) 19
YMUL (268) 20
YDIV (269) 21
YCMP (270) 22
YNOP (271)
YJMP (272) 36
YJEQ (273) 37
YJNE (274) 38
YJLT (275) 39
YJLE (276) 40
YJGT (277) 41
YJGE (278) 42
YCALL (279) 43
YRET (280) 23
YINPUT (281) 32
YOUTPUT (282) 33
YWORD (283) 11
YIMPORT (284) 8
YEXPORT (285) 9
YSTOP (286) 24
YMODULE (287) 7
YEND (288) 1
YDOT (289) 1 6 7 8 9 11
YSTART (290) 6
YSPFREE (291) 34
YSPALLOC (292) 35
YLABEL (293) 6 7 8 9 11 13
YNUMBER (294) 11 14
YLABYCOLON (295) 15


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
unit (42)
    on left: 1, on right: 0
head (43)
    on left: 2 3, on right: 1 3
code (44)
    on left: 4 5, on right: 1 5
head_dir (45)
    on left: 6 7 8 9 11, on right: 2 3
$@1 (46)
    on left: 10, on right: 11
instructions (47)
    on left: 12 13 14 15, on right: 4 5
b_opcode (48)
    on left: 16 17 18 19 20 21 22 23 24 25, on right: 12 25
a_opcode (49)
    on left: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
    44, on right: 13 14 44


state 0

    0 $accept: . unit $end

    YDOT    shift, and go to state 1
    YLABEL  shift, and go to state 2

    unit      go to state 3
    head      go to state 4
    head_dir  go to state 5


state 1

    6 head_dir: YDOT . YSTART YLABEL
    7         | YDOT . YMODULE YLABEL
    8         | YDOT . YIMPORT YLABEL
    9         | YDOT . YEXPORT YLABEL

    YIMPORT  shift, and go to state 6
    YEXPORT  shift, and go to state 7
    YMODULE  shift, and go to state 8
    YSTART   shift, and go to state 9


state 2

   11 head_dir: YLABEL . $@1 YDOT YWORD YNUMBER

    $default  reduce using rule 10 ($@1)

    $@1  go to state 10


state 3

    0 $accept: unit . $end

    $end  shift, and go to state 11


state 4

    1 unit: head . code YDOT YEND
    3 head: head . head_dir

    error       shift, and go to state 12
    YPUSHI      shift, and go to state 13
    YPUSHIR     shift, and go to state 14
    YPUSH       shift, and go to state 15
    YPUSHR      shift, and go to state 16
    YPOP        shift, and go to state 17
    YPOPR       shift, and go to state 18
    YPUSHX      shift, and go to state 19
    YPOPX       shift, and go to state 20
    YADD        shift, and go to state 21
    YSUB        shift, and go to state 22
    YMUL        shift, and go to state 23
    YDIV        shift, and go to state 24
    YCMP        shift, and go to state 25
    YJMP        shift, and go to state 26
    YJEQ        shift, and go to state 27
    YJNE        shift, and go to state 28
    YJLT        shift, and go to state 29
    YJLE        shift, and go to state 30
    YJGT        shift, and go to state 31
    YJGE        shift, and go to state 32
    YCALL       shift, and go to state 33
    YRET        shift, and go to state 34
    YINPUT      shift, and go to state 35
    YOUTPUT     shift, and go to state 36
    YSTOP       shift, and go to state 37
    YDOT        shift, and go to state 1
    YSPFREE     shift, and go to state 38
    YSPALLOC    shift, and go to state 39
    YLABEL      shift, and go to state 2
    YLABYCOLON  shift, and go to state 40

    code          go to state 41
    head_dir      go to state 42
    instructions  go to state 43
    b_opcode      go to state 44
    a_opcode      go to state 45


state 5

    2 head: head_dir .

    $default  reduce using rule 2 (head)


state 6

    8 head_dir: YDOT YIMPORT . YLABEL

    YLABEL  shift, and go to state 46


state 7

    9 head_dir: YDOT YEXPORT . YLABEL

    YLABEL  shift, and go to state 47


state 8

    7 head_dir: YDOT YMODULE . YLABEL

    YLABEL  shift, and go to state 48


state 9

    6 head_dir: YDOT YSTART . YLABEL

    YLABEL  shift, and go to state 49


state 10

   11 head_dir: YLABEL $@1 . YDOT YWORD YNUMBER

    YDOT  shift, and go to state 50


state 11

    0 $accept: unit $end .

    $default  accept


state 12

   25 b_opcode: error . b_opcode
   44 a_opcode: error . a_opcode

    error     shift, and go to state 12
    YPUSHI    shift, and go to state 13
    YPUSHIR   shift, and go to state 14
    YPUSH     shift, and go to state 15
    YPUSHR    shift, and go to state 16
    YPOP      shift, and go to state 17
    YPOPR     shift, and go to state 18
    YPUSHX    shift, and go to state 19
    YPOPX     shift, and go to state 20
    YADD      shift, and go to state 21
    YSUB      shift, and go to state 22
    YMUL      shift, and go to state 23
    YDIV      shift, and go to state 24
    YCMP      shift, and go to state 25
    YJMP      shift, and go to state 26
    YJEQ      shift, and go to state 27
    YJNE      shift, and go to state 28
    YJLT      shift, and go to state 29
    YJLE      shift, and go to state 30
    YJGT      shift, and go to state 31
    YJGE      shift, and go to state 32
    YCALL     shift, and go to state 33
    YRET      shift, and go to state 34
    YINPUT    shift, and go to state 35
    YOUTPUT   shift, and go to state 36
    YSTOP     shift, and go to state 37
    YSPFREE   shift, and go to state 38
    YSPALLOC  shift, and go to state 39

    b_opcode  go to state 51
    a_opcode  go to state 52


state 13

   26 a_opcode: YPUSHI .

    $default  reduce using rule 26 (a_opcode)


state 14

   27 a_opcode: YPUSHIR .

    $default  reduce using rule 27 (a_opcode)


state 15

   28 a_opcode: YPUSH .

    $default  reduce using rule 28 (a_opcode)


state 16

   29 a_opcode: YPUSHR .

    $default  reduce using rule 29 (a_opcode)


state 17

   30 a_opcode: YPOP .

    $default  reduce using rule 30 (a_opcode)


state 18

   31 a_opcode: YPOPR .

    $default  reduce using rule 31 (a_opcode)


state 19

   16 b_opcode: YPUSHX .

    $default  reduce using rule 16 (b_opcode)


state 20

   17 b_opcode: YPOPX .

    $default  reduce using rule 17 (b_opcode)


state 21

   18 b_opcode: YADD .

    $default  reduce using rule 18 (b_opcode)


state 22

   19 b_opcode: YSUB .

    $default  reduce using rule 19 (b_opcode)


state 23

   20 b_opcode: YMUL .

    $default  reduce using rule 20 (b_opcode)


state 24

   21 b_opcode: YDIV .

    $default  reduce using rule 21 (b_opcode)


state 25

   22 b_opcode: YCMP .

    $default  reduce using rule 22 (b_opcode)


state 26

   36 a_opcode: YJMP .

    $default  reduce using rule 36 (a_opcode)


state 27

   37 a_opcode: YJEQ .

    $default  reduce using rule 37 (a_opcode)


state 28

   38 a_opcode: YJNE .

    $default  reduce using rule 38 (a_opcode)


state 29

   39 a_opcode: YJLT .

    $default  reduce using rule 39 (a_opcode)


state 30

   40 a_opcode: YJLE .

    $default  reduce using rule 40 (a_opcode)


state 31

   41 a_opcode: YJGT .

    $default  reduce using rule 41 (a_opcode)


state 32

   42 a_opcode: YJGE .

    $default  reduce using rule 42 (a_opcode)


state 33

   43 a_opcode: YCALL .

    $default  reduce using rule 43 (a_opcode)


state 34

   23 b_opcode: YRET .

    $default  reduce using rule 23 (b_opcode)


state 35

   32 a_opcode: YINPUT .

    $default  reduce using rule 32 (a_opcode)


state 36

   33 a_opcode: YOUTPUT .

    $default  reduce using rule 33 (a_opcode)


state 37

   24 b_opcode: YSTOP .

    $default  reduce using rule 24 (b_opcode)


state 38

   34 a_opcode: YSPFREE .

    $default  reduce using rule 34 (a_opcode)


state 39

   35 a_opcode: YSPALLOC .

    $default  reduce using rule 35 (a_opcode)


state 40

   15 instructions: YLABYCOLON .

    $default  reduce using rule 15 (instructions)


state 41

    1 unit: head code . YDOT YEND
    5 code: code . instructions

    error       shift, and go to state 12
    YPUSHI      shift, and go to state 13
    YPUSHIR     shift, and go to state 14
    YPUSH       shift, and go to state 15
    YPUSHR      shift, and go to state 16
    YPOP        shift, and go to state 17
    YPOPR       shift, and go to state 18
    YPUSHX      shift, and go to state 19
    YPOPX       shift, and go to state 20
    YADD        shift, and go to state 21
    YSUB        shift, and go to state 22
    YMUL        shift, and go to state 23
    YDIV        shift, and go to state 24
    YCMP        shift, and go to state 25
    YJMP        shift, and go to state 26
    YJEQ        shift, and go to state 27
    YJNE        shift, and go to state 28
    YJLT        shift, and go to state 29
    YJLE        shift, and go to state 30
    YJGT        shift, and go to state 31
    YJGE        shift, and go to state 32
    YCALL       shift, and go to state 33
    YRET        shift, and go to state 34
    YINPUT      shift, and go to state 35
    YOUTPUT     shift, and go to state 36
    YSTOP       shift, and go to state 37
    YDOT        shift, and go to state 53
    YSPFREE     shift, and go to state 38
    YSPALLOC    shift, and go to state 39
    YLABYCOLON  shift, and go to state 40

    instructions  go to state 54
    b_opcode      go to state 44
    a_opcode      go to state 45


state 42

    3 head: head head_dir .

    $default  reduce using rule 3 (head)


state 43

    4 code: instructions .

    $default  reduce using rule 4 (code)


state 44

   12 instructions: b_opcode .

    $default  reduce using rule 12 (instructions)


state 45

   13 instructions: a_opcode . YLABEL
   14             | a_opcode . YNUMBER

    YLABEL   shift, and go to state 55
    YNUMBER  shift, and go to state 56


state 46

    8 head_dir: YDOT YIMPORT YLABEL .

    $default  reduce using rule 8 (head_dir)


state 47

    9 head_dir: YDOT YEXPORT YLABEL .

    $default  reduce using rule 9 (head_dir)


state 48

    7 head_dir: YDOT YMODULE YLABEL .

    $default  reduce using rule 7 (head_dir)


state 49

    6 head_dir: YDOT YSTART YLABEL .

    $default  reduce using rule 6 (head_dir)


state 50

   11 head_dir: YLABEL $@1 YDOT . YWORD YNUMBER

    YWORD  shift, and go to state 57


state 51

   25 b_opcode: error b_opcode .

    $default  reduce using rule 25 (b_opcode)


state 52

   44 a_opcode: error a_opcode .

    $default  reduce using rule 44 (a_opcode)


state 53

    1 unit: head code YDOT . YEND

    YEND  shift, and go to state 58


state 54

    5 code: code instructions .

    $default  reduce using rule 5 (code)


state 55

   13 instructions: a_opcode YLABEL .

    $default  reduce using rule 13 (instructions)


state 56

   14 instructions: a_opcode YNUMBER .

    $default  reduce using rule 14 (instructions)


state 57

   11 head_dir: YLABEL $@1 YDOT YWORD . YNUMBER

    YNUMBER  shift, and go to state 59


state 58

    1 unit: head code YDOT YEND .

    $default  reduce using rule 1 (unit)


state 59

   11 head_dir: YLABEL $@1 YDOT YWORD YNUMBER .

    $default  reduce using rule 11 (head_dir)
